# hybrid-ts

./: .gitignore  README.md  pyproject.toml
data/: DCOILWTICO.csv
notebooks/: 1_ar_selection.ipynb  2_tcn_selection.ipynb  3_hybrid_selection.ipynb  4_in_out_sample_eval.ipynb  anna_notebook.ipynb  ar_selection.ipynb  hybrid_ts.ipynb  sklearn.ipynb
notebooks/.ipynb_checkpoints/: hybrid_ts-checkpoint.ipynb  sklearn-checkpoint.ipynb
src/: diagnose.py  models.py  train.py
tests/: verify_models.py
weights/: model_weights_ar1.pkl  model_weights_classic_tcn.pth  model_weights_hybrid_ar1.pth  model_weights_hybrid_ar5.pth  model_weights_hybrid_arma.pth  model_weights_mult_hybrid_arma.pth
