[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "darts>=0.37.1",
    "duckdb>=1.4.4",
    "ipykernel>=6.29.0,<7.0.0",
    "jupyterlab>=4.0.0,<4.5.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<2.3.0",
    "scikit-learn>=1.3.0,<1.8.0",
    "scipy-stubs~=1.15.3",
    "seaborn>=0.12.0",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
    "torch>=2.0.0,<2.9.0",
    "xgboost>=3.1.3",
]

[[tool.uv.index]]
url = "https://github.com/vmpierluisi/ml-project"

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
